# fairness_troops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_validation.py  verify_metrics.py
api/: cache.py  celery_app.py  celery_service.py  database.py  main.py  models.py  run_server.py  schemas.py  tasks.py
app/: app.py
benchmarks/: benchmark_fairness_improvement.py  benchmark_performance.py
data/: adult_model.skops  adult_test_data.csv  sample_loan_data.csv  sample_model.skops
examples/: 01_train_sample_model.py  02_train_adult_model.py
src/bias_debugger/: __init__.py  core.py  metrics.py
src/fairness_troops/: __init__.py  core.py  explainability.py  metrics.py  mitigation.py  reporting.py
src/fairness_troops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_metrics.py  test_schemas.py
