[project]
name = "fairness-troops"
version = "0.1.0"
description = "A toolkit to audit and mitigate bias in ML models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Disha Garg", email = "garg.16.disha@email.com" },
]
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
