[project]
name = "fairness-troops"
version = "0.1.0"
description = "Fairness Auditing Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "scikit-learn",
    "joblib",
    "matplotlib",
    "numpy",
    "pytest",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "fairlearn",
    "requests",
    "sqlalchemy",
    "asyncpg",
    "greenlet",
    "redis",
    "celery[redis]",
    "shap",
    "fpdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fairness_troops"]
